# electronics_network

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: initial_data.json
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
tests/: conftest.py
tests/test_network/: test_api_network.py  test_models_network.py  test_serializers_network.py
tests/test_users/: test_api_users.py  test_models_users.py
users/: admin.py  models.py  serializers.py  views.py
users/management/commands/: init_roles.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
