[tool.poetry]
name = "electronics"
version = "0.1.0"
description = ""
authors = ["Annabse27 <annabse27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
drf-spectacular = "^0.27.2"
djangorestframework-simplejwt = "^5.3.1"
python-decouple = "^3.8"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
